creación de formulario de contactos en mi index.html

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
                 </tbody>
             </table>
-        </section><br>  
-
+        </section> <br>  
+        <!-- formulario -->
         <section>
             <form>
 
